# opengl-programming

./: .gitignore
assig1phase1/: .gitignore  CMakeLists.txt  LightLoader.cpp  MeshLoader.cpp  SceneLoader.cpp  ViewLoader.cpp  main.cpp
assig1phase2/: .gitignore  CMakeLists.txt  MeshLoader.hpp  main.cpp  setup.sh
assig2/: .gitignore  CMakeLists.txt  MeshLoader.hpp  main.cpp
assig3/: .gitignore  CMakeLists.txt  LightLoader.hpp  MeshLoader.hpp  SceneLoader.hpp  ViewLoader.hpp  hairSim.frag  hairSim.geom  hairSim.vert  main.cpp  phongShad.frag  phongShad.vert
basic/: CMakeLists.txt  basic1.cpp  basic2.cpp  basic3.cpp  basic4.cpp
