cmake_minimum_required(VERSION 3.6)
project(assig1phase1)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Wpedantic")
set(SOURCE_FILES main.cpp)
add_executable(assig1phase1 ${SOURCE_FILES})
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS})
target_link_libraries(assig1phase1 ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES})
