cmake_minimum_required(VERSION 3.6)
project(assig2)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -Wextra -Wpedantic")
set(SOURCE_FILES main.cpp)
add_definitions(-DALTERNATIVE)
add_executable(assig2 ${SOURCE_FILES})
find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)
find_package(GLEW REQUIRED)
find_path(FREEIMAGE_INCLUDE_DIRS FreeImage.h)
find_library(FREEIMAGE_LIBRARIES libfreeimage)
include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${FREEIMAGE_INCLUDE_DIRS})
target_link_libraries(assig2 ${OPENGL_LIBRARIES} ${GLUT_LIBRARIES} ${GLEW_LIBRARIES} freeimage)
